[gd_scene load_steps=8 format=3 uid="uid://dnvhmgtu7p4yb"]

[ext_resource type="Script" path="res://Enemy/Rocket.gd" id="1_d2apa"]
[ext_resource type="Texture2D" uid="uid://dd7vphe7wnq8k" path="res://Textures/Rocket/Rocket1.png" id="2_tdlyv"]
[ext_resource type="Texture2D" uid="uid://eodoognxhtkh" path="res://Textures/Rocket/Rocket2.png" id="3_h5cmj"]
[ext_resource type="Texture2D" uid="uid://du5fi7vb51thh" path="res://Textures/Rocket/ParticleEffect.png" id="4_m4itj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7kdfs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tdlyv")
}, {
"duration": 1.0,
"texture": ExtResource("3_h5cmj")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dyknx"]
radius = 14.0
height = 50.0

[sub_resource type="Curve" id="Curve_7br67"]
min_value = -1.0
_data = [Vector2(0.447917, -0.13879), 0.0, 0.0, 0, 0, Vector2(0.584821, 0.345196), 0.0, 0.0, 0, 0, Vector2(0.683036, 0.572954), 0.0, 0.0, 0, 0, Vector2(0.891369, 0.686833), 0.0, 0.0, 0, 0, Vector2(0.998512, 0.686833), 0.0, 0.0, 0, 0]
point_count = 5

[node name="Rocket" type="Area2D"]
rotation = 1.5708
script = ExtResource("1_d2apa")
speed = 220
countdown = 2.3

[node name="Countdown" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7kdfs")
frame_progress = 0.576615

[node name="Rocket Collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dyknx")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-32, 0)
amount = 6
lifetime = 0.2
texture = ExtResource("4_m4itj")
direction = Vector2(-1, 0)
spread = 60.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.2
scale_amount_max = 1.3
hue_variation_min = -0.04
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_7br67")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(-24, 26)
rotation = -0.785398
amount = 6
lifetime = 0.2
texture = ExtResource("4_m4itj")
direction = Vector2(-1, 0)
spread = 60.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.2
scale_amount_max = 1.3
hue_variation_min = -0.04
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_7br67")

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2(-24, -24)
rotation = 0.785398
amount = 6
lifetime = 0.2
texture = ExtResource("4_m4itj")
direction = Vector2(-1, 0)
spread = 60.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.2
scale_amount_max = 1.3
hue_variation_min = -0.04
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_7br67")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]
